# portfolio-backend

./: README.md  docker-compose.yml
backend/: backend.dockerfile
backend/app/: pyproject.toml
backend/app/app/: config.py  db.py  main.py
backend/app/app/api/api_v1/: api.py  dependencies.py
backend/app/app/api/api_v1/endpoints/: projects.py  resume.py  test.py  user.py
backend/app/app/models/: __init__.py  projects.py  user.py
backend/app/app/schemas/: __init__.py  projects.py  resume.py  user.py
backend/app/migrations/models/: 0_20220712134303_init.sql  0_20220714114512_init.sql  0_20220722063952_init.sql  1_20220712134930_update.sql  1_20220718074902_update.sql  1_20220727134538_update.sql  2_20220714044309_update.sql  2_20220718102858_update.sql  3_20220714044515_update.sql
